fixed up card to able to add cards properly into the database and stay, as well doing MAJOR changes to the page and making it look very nice and following the brand guides we had

--- a/mtg-ui/src/app/app.html
+++ b/mtg-ui/src/app/app.html
@@ -3,10 +3,7 @@
     <div class="app-title">
       <span class="app-title__icon">🃏</span>
       <div>
-        <h1>MTG Card Manager</h1>
-        <p class="app-title__subtitle">
-          Search and manage your Magic: The Gathering cards, workers, and orders.
-        </p>
+        <h1>Josh's Cardboard Card Manager</h1>
       </div>
     </div>
     
