--- a/mtg-ui/src/app/features/card/card-detail/card-detail.component.html
+++ b/mtg-ui/src/app/features/card/card-detail/card-detail.component.html
@@ -1,18 +1,20 @@
 <tr>
-  <td>{{ item.cardNumber }}</td>
-  <td>{{ item.setName }}</td>
-  <td>{{ item.cardName }}</td>
-  <td>{{ item.cardType }}</td>
-  <td>{{ item.manaValue }}</td>
+  <td><strong>{{ item.cardNumber }}</strong></td>
+  <td><span class="badge">{{ item.setName }}</span></td>
+  <td class="card-name">{{ item.cardName }}</td>
+  <td class="card-type">{{ item.cardType }}</td>
+  <td class="mana-value">{{ item.manaValue }}</td>
+  <td><span class="condition-badge" [class]="'condition-' + item.cardCondition.toLowerCase()">{{ item.cardCondition }}</span></td>
 
   <td (dblclick)="enablePriceEdit()">
     @if (editingPrice()) {
       <input type="number"
+             step="0.01"
              [value]="draftPrice() ?? ''"
              (input)="draftPrice.set($any($event.target).valueAsNumber)"
              (keyup.escape)="cancelPrice()" />
     } @else {
-      {{ item.price }}
+      <span class="price">${{ item.price.toFixed(2) }}</span>
     }
   </td>
 
@@ -23,7 +25,11 @@
              (input)="draftStock.set($any($event.target).valueAsNumber)"
              (keyup.escape)="cancelStock()" />
     } @else {
-      {{ item.stock }}
+      <span class="stock">{{ item.stock }}</span>
     }
+  </td>
+  
+  <td>
+    <button class="btn-delete" (click)="deleteCard()">Delete</button>
   </td>
 </tr>
