--- a/mtg-ui/src/styles.scss
+++ b/mtg-ui/src/styles.scss
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+/* Brand Guide Colors */
+:root {
+  --primary-blurple: #8178FF;
+  --primary-sunset: #D1664B;
+  --accent-lemon-lime: #A8F6BB;
+  --accent-plum: #7D1B7A;
+  --accent-peach: #FFB2B2;
+  --gray-light: #EDE4E2;
+  --gray-light-brown: #ABA2A0;
+  --gray-brown: #897564;
+  --gray-purple: #B990A5;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Courier Prime', monospace;
+  background: #fff;
+  color: #333;
+}
+
+* {
+  box-sizing: border-box;
+}
